<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.MainFragment">

    <ImageView
        android:visibility="visible"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:scaleType="fitXY"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/time_default_text"
                android:fontFamily="@font/arial_rounded_mt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imWeather"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_default_text"
                android:fontFamily="@font/arial_rounded_mt"
                android:textColor="@color/text_color_main"
                android:textSize="45sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imWeather" />

            <TextView
                android:id="@+id/tvCurrentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/temp_default_text"
                android:fontFamily="@font/arial_rounded_mt"
                android:textColor="@color/text_color_main"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCity"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvCurrentCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/condition_default_text"
                android:fontFamily="@font/arial_rounded_mt"
                android:textColor="@color/text_color_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentTemp" />

            <TextView
                android:id="@+id/tvMaxMinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/max_min_texts"
                android:fontFamily="@font/arial_rounded_mt"
                android:textColor="@color/text_color_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentCondition" />

            <ImageButton
                android:id="@+id/buttonSyncLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:src="@drawable/ic_baseline_cloud_sync"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/buttonTypeCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:src="@drawable/ic_baseline_edit_location_alt_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_layout_hours" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_layout_days" />

    </com.google.android.material.tabs.TabLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.cardview.widget.CardView
            android:backgroundTint="@color/shimmer_color"
            android:visibility="visible"
            android:id="@+id/cardViewShimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="6dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.cardview.widget.CardView>

    </com.facebook.shimmer.ShimmerFrameLayout>


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="6dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="6dp"
            >

            <include layout="@layout/shimmer_list_item">

            </include>
            <include layout="@layout/shimmer_list_item">

            </include>
            <include layout="@layout/shimmer_list_item">

            </include>
            <include layout="@layout/shimmer_list_item">

            </include>
            <include layout="@layout/shimmer_list_item">

            </include>
            <include layout="@layout/shimmer_list_item">

            </include>
            <include layout="@layout/shimmer_list_item">

            </include>
            <include layout="@layout/shimmer_list_item">

            </include>

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:visibility="invisible"
        android:id="@+id/viewPager2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>